# team_acrv_2016

./: LICENSE  README.md
acrv_tracik/trac_ik_kinematics_plugin/src/: trac_ik_kinematics_plugin.cpp
apc_3d_vision/: CMakeLists.txt  package.xml
apc_3d_vision/bash/: batch_icp_align.sh  manual_point_cloud_labeller.sh
apc_3d_vision/include/: shelf_scan.h  shelf_scan_node.h
apc_3d_vision/launch/: BinDim.yaml  calibrate_shelf.launch  fit_cad_models_ros_node.launch  float_objects_ros_node.launch  grab_points.launch  shelf_based_image_cropper.launch  shelf_based_image_cropper_james.launch  shelf_registration_ros_node.launch  split_labelled_point_cloud_ros_node.launch  test_service_nodes.launch  toteCropping.launch
apc_3d_vision/models/: initial_shelf_tf.yaml  pod_lowres.ply
apc_3d_vision/scripts/: shelf_republisher_node.py  testToteCropping.py
apc_3d_vision/src/: align_pca_icp_test.cpp  align_pca_ndt_test.cpp  align_prerejective_test.cpp  cropTote.cpp  fit_cad_models_ros_node.cpp  float_objects_ros_node.cpp  grab_points.cpp  label_corners.cpp  manual_point_cloud_labeller.cpp  match_objects_ros_node.cpp  pcd2ply.cpp  shelf_based_image_cropper_node.cpp  shelf_based_image_cropper_node_james.cpp  shelf_registration_ros_node.cpp  shelf_scan.cpp  shelf_scan_node.cpp  test_publish_stl.cpp  test_service_nodes.cpp
apc_3d_vision/srv/: fit_cad_models.srv  shelf_scan_bin.srv
apc_baxter/: .gitignore  README.md
apc_baxter/apc_gripper_description/: CMakeLists.txt  package.xml
apc_baxter/apc_gripper_description/launch/: gripper_static_tf.launch
apc_baxter/bash/: baxter_commands.sh
apc_baxter/baxter_kinect/: CMakeLists.txt  package.xml
apc_baxter/parameters/: global_params.yaml
apc_deep_vision/: .gitignore  CMakeLists.txt  README.md  package.xml
apc_deep_vision/launch/: googlenet_classifer.launch
apc_deep_vision/models/: classes.txt  deploy_picking.prototxt  deploy_stowing.prototxt
apc_deep_vision/nodes/: caffeInterface.py  googlenet_node.py
apc_deep_vision/python/: generate_data.py
apc_docs/: AGuideToPicking.md  FixBashPermissionDenied.md  FixTimeSync.md  PerformShelfPreAlignment.md  README.md  RunEverythingInstructions.md  SimulationInstructions.md  TimeDoc.md  VersionControl.md  caffe_install.md  changeArms.md  install-everything
apc_docs/pcl_patch/: colors.cu  pcl_fix_post.sh  pcl_fix_pre.sh
apc_grasping/: CMakeLists.txt
apc_grasping/config/: poses.yaml  poses_old.yaml
apc_grasping/include/apc_grasping/: Item.h  pcl_filters.h
apc_grasping/launch/: test_rotational_weighting.launch  test_shelf_position.launch
apc_grasping/meshes/: kleenex_tissue_box.STL  platinum_pets_dog_bowl.STL  rawlings_baseball.STL  scotch_duct_tape.STL
apc_grasping/src/: Item.cpp  attach_object_to_robot.cpp  baxter_torque_subscriber.cpp  create_items.cpp  fill_bins_and_tote.cpp  object_publisher.cpp  test_rotational_weighting.cpp  test_shelf_position.cpp  update_endpoint_weight.cpp
apc_kinfu/: CMakeLists.txt  README.md  package.xml
apc_kinfu/cmake/: CustomPCLConfig.cmake
apc_kinfu/include/ros_kinfu/: imagesubscriber.h  parameters.h
apc_kinfu/launch/: ros_kinfu.launch  ros_kinfu_kinect.launch  ros_kinfu_stow.launch
apc_kinfu/pcl_files/: internal.h  kinfu.cpp  kinfu.h  maps.cu
apc_kinfu/src/: imagesubscriber.cpp  kinfu_tools.cpp  kinfu_tools.h  kinfu_viz_tools.cpp  kinfu_viz_tools.h  ros_kinfu.cpp  ros_kinfu.h  ros_kinfu_app.cpp  ros_kinfu_publisher.cpp  ros_kinfu_publisher.h
apc_msgs/: CMakeLists.txt
apc_msgs/srv/: CropCloud.srv
apc_objects/: APC_pick_items_ID_names  CMakeLists.txt  package.xml
apc_objects/config/: apc_objects.yaml
apc_objects/launch/: apc_objects_upload.launch
apc_objects/pointclouds/: crayola_24_ct.ply  dasani_water_bottle.ply  dove_beauty_bar.ply  dr_browns_bottle_brush.ply  elmers_washable_no_run_school_glue.ply  fitness_gear_3lb_dumbell.ply  i_am_a_bunny_book.ply  jane_eyre_dvd.ply  kleenex_paper_towels.ply  kleenex_tissue_box.ply  laugh_out_loud_joke_book.ply  platinum_pets_dog_bowl.ply  rawlings_baseball.ply  scotch_cloth_duct_tape.ply  soft_white_light_bulb.ply  staples_index_cards.ply  ticonderoga_12_pencils.ply  up_glucose_bottle.ply
apc_objects/scripts/: checkImages.py
apc_random_orders/: LICENSE  README.md  README.rst  neworder.json  order.json  prioritize_orders.py  random_orders.py  random_stow.py  stow.json
apc_rgbd_tf_calibration/: .gitignore  CMakeLists.txt  README.md  kinect-Calibration_Results.txt  kinect-base_to_end_pose.csv  kinect-predefined_left_poses.csv  kinect-right_arm_poses.csv  kinect-sensor_to_marker_pose.csv  package.xml  realsense-Calibration_Results.txt  realsense-base_to_end_pose.csv  realsense-left_arm_poses.csv  realsense-predefined_left_poses.csv  realsense-predefined_right_poses.csv  realsense-right_arm_poses.csv  realsense-sensor_to_marker_pose.csv
apc_rgbd_tf_calibration/launch/: baxter_kinect_calibrated.launch  baxter_realsense_calibrated.launch  kinect_ar_depth_indiv.launch  kinect_tf_calibration.rviz  realsense_ar_depth_indiv.launch  realsense_tf_calibration.rviz
apc_rgbd_tf_calibration/src/: calibration.py  kinect_calibration_without_moveit.py  source_functions.py
apc_state_machine/mission_plan/: CMakeLists.txt  package.xml
apc_state_machine/state_machine/: CMakeLists.txt  package.xml
moveit_lib/include/: moveit_robot.h
moveit_lib/src/: moveit_robot.cpp  moveit_robot_node.cpp
moveit_lib/srv/: move_robot_pose.srv
object_proposal/: CMakeLists.txt  package.xml
object_proposal/src/: object_proposal_node.cpp
ros_realsense/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
ros_realsense/launch/: realsense_camera.launch  realsense_frames.launch
ros_realsense/src/: ros_realsense.cpp
segmentation/: .gitignore  CMakeLists.txt  readme
segmentation/cmake/: CustomPCLConfig.cmake
segmentation_ros/: .gitignore  CMakeLists.txt  LICENSE  package.xml  readme.md
segmentation_ros/include/: README
segmentation_ros/launch/: realsense_segmentation.launch  segmentation_ros_node.launch
segmentation_ros/src/: segmentation_ros_node.cpp
(+198 files in other folders)
