<?xml version="1.0"?>
<package>
  <name>ros_kinfu</name>
  <version>0.0.0</version>
  <description>The ros wrapper for kinfu package</description>

  <maintainer email="c.lehnert@qut.edu.au">qut</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>apc_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_ros</build_depend>'
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>apc_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
  </export>
</package>
